[package]
name = "git_statusline"
version = "1.0.0"
authors = ["Addie Morrison <0xADD1E@gmail.com>"]
description = "A simple, sweet, fast statusline fragment for git repos"
readme = "https://raw.githubusercontent.com/0xADD1E/git_statusline/master/README.md"
repository = "https://github.com/0xADD1E/git_statusline"
keywords = ["git", "terminal", "statusline"]
license = "MIT"
maintenance = { status = "passively-maintained" }

[dependencies]
git2 = "0.7.1"
colored = "1.6.0"