[package]
name = "git_statusline"
version = "1.3.0"
authors = ["Addie Morrison <0xADD1E@gmail.com>"]
description = "A simple, sweet, fast statusline fragment for git repos"
readme = "README.md"
repository = "https://github.com/0xADD1E/git_statusline"
keywords = ["git", "terminal", "statusline"]
license = "MIT"

[dependencies]
git2 = "0.7.1"
colored = "1.6.0"
failure = "0.1.1"